src/main/java/com/example/usersmanagement/Errors/GlobalExceptionHandler.java
package com.example.usersmanagement.Errors;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ControllerAdvice;
import org.springframework.web.bind.annotation.ExceptionHandler;

@ControllerAdvice
public class GlobalExceptionHandler {
    private final Logger LOGGER = LoggerFactory.getLogger(GlobalExceptionHandler.class);

    @ExceptionHandler(ApiException.class)
    public ResponseEntity<?> handleApiException(ApiException e) {
        LOGGER.error(e.getErrorMessage().getMessage(), e);
        return new ErrorResponse(e).getResponse();
    }
}
